# selfmodifyingc

./: CMakeLists.txt  README.md  dynarr.c  dynarr.h  main.c  utils.c  utils.h
